--- a/src/com/mobissime/andjety/dialogs/AboutDialog.form
+++ b/src/com/mobissime/andjety/dialogs/AboutDialog.form
@@ -74,7 +74,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Developed by Paul Coiffier"/>
+        <Property name="text" type="java.lang.String" value="Copyright 2012-2015 Paul Coiffier"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
@@ -118,7 +118,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
-        <Property name="text" type="java.lang.String" value="www.saphirsoftware.com"/>
+        <Property name="text" type="java.lang.String" value="www.mobissime.com"/>
       </Properties>
     </Component>
   </SubComponents>
