--- a/src/com/mobissime/andjety/windows/HistoriqueTaskDialog.form
+++ b/src/com/mobissime/andjety/windows/HistoriqueTaskDialog.form
@@ -23,7 +23,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane2" pref="673" max="32767" attributes="0"/>
+          <Component id="jScrollPane2" max="32767" attributes="0"/>
           <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
